fixed buttons and header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,18 +14,20 @@ body {
   /*apply style to the <header>*/
   
   
-header {padding: 20px 35px;
-background-color: #39a6b2;
-display:flex;
-justify-content:space-between;
-flex-wrap:wrap;
-position: -webkit-sticky;
-position: sticky;
-top: 0;
-background-image: url("../images/hero-bg.jpg");
-background-size: cover;
-background-position: 80%;
-background-attachment:fixed;
+header {
+    padding: 20px 35px;
+    background-color: #39a6b2;
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment:fixed;
+    z-index:9999;
 }
 
 
@@ -78,6 +80,65 @@ div h3 {
 .hero-form p {
     margin: 5px 0 15px 0;
 }
+
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label{
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255,255,255,0.75);
+    border: 1px solid #024e76;
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    position: absolute;
+    left: -29px;
+    top: -3px;
+  }
+  
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+  }
+
+  .checkbox-wrapper input + label::after, 
+  .radio-wrapper input + label::after {
+    content: none;
+  }
+  
+  .checkbox-wrapper input:checked + label::after, 
+  .radio-wrapper input:checked + label::after {
+    content: "";
+  }
 
 .intro p {
     line-height: 1.7;
